--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -113,8 +113,13 @@
                 <a class="btn btn-info" href="">Voir l'étiquette chronnopost</a>
             </div>
         </div>
-        {% else %}
-            Tu n'as encore estimé aucun téléphone. <a href="{{ path('new_estimation') }}">Faire une estimation ?</a>
+    {% else %}
+    <div class="row mb-3">
+        <div class="offset-2 col-8">
+            Tu n'as encore estimé aucun téléphone.
+            <a href="{{ path('new_estimation') }}" class="primary-button">Faire une estimation ?</a>
+        </div>
+    </div>
     {% endfor %}
     <div class="row mb-5">
     </div>
