Add a link for collector to show collect to comes

--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -19,6 +19,11 @@
             {% endif %}
 
             <h1 class="primary-title">{{ pageTitle }}</h1>
+            <div class="text-right">
+                <a class="text-right" href="{{ path('show_collect') }}">
+                    Collectes à venir
+                </a>
+            </div>
             <div class="row align-items-center table-head rounded-top">
                 <div class="col-3 text-center">
                     Nom - Prénom
