number type turn into string on user and organisms; changes about the uploads file

--- a/templates/admin/show_organism.html.twig
+++ b/templates/admin/show_organism.html.twig
@@ -12,7 +12,7 @@
     <main class="partnerPage">
 
 
-        <img title="{{organism.organismName }} {{ organism.organismStatus }}" src="/uploads/logos/{{ organism.logo }}" alt="{{ organism.organismName }}">
+        <img title="{{organism.organismName }} {{ organism.organismStatus }}" src="/uploads/Logos/Logos/{{ organism.logo }}" alt="{{ organism.organismName }}">
 
 
         <div class="partnerInfo">
@@ -25,7 +25,7 @@
 
                 <p>{{ organism.organismPostcode }}</p>
 
-                <p>0{{ organism.organismPhone }}</p>
+                <p>{{ organism.organismPhone }}</p>
             </div>
 
 
