--- a/templates/home/error_not_allowed.html.twig
+++ b/templates/home/error_not_allowed.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
     <h1 class="primary-title">
-        Cette page n'est pas malheureusement pas disponible !
+        Cette page n'est malheureusement pas disponible !
     </h1>
     <a href="{{ path('home') }}" class="fourth-button">Retour à l'accueil</a>
 
