--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,7 +84,7 @@
             <article>
                 {% for organism in organisms %}
                 <a href="{{ path('organisms_show', {'id' : organism.id}) }}">
-                    <img src="{{asset('uploads/logos/')}}{{organism.logo}}" alt="{{organism.organismName}}"></a>
+                    <img src="{{asset('uploads/Logos/Logos/')}}{{organism.logo}}" alt="{{organism.organismName}}"></a>
                 {% endfor %}
 
             </article>
