--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -28,7 +28,7 @@ header{
             padding: 5px;
             font-weight: 600;
             background-color: $secondary-color;
-            opacity: 70%;
+            opacity: 0.7;
 
             li{
                 margin-left: 10px;
