Trying canva to open webcam

--- a/templates/bdc/openCamera.html.twig
+++ b/templates/bdc/openCamera.html.twig
@@ -34,7 +34,7 @@
 {% endblock %}
 
 {%  block javascripts %}
-    {{ encore_entry_script_tags('adminHomePage') }}
+    {{ encore_entry_script_tags('openCamera') }}
 {% endblock %}
 
 
