Second test for camera script

--- a/templates/bdc/openCamera.html.twig
+++ b/templates/bdc/openCamera.html.twig
@@ -4,11 +4,6 @@
     Utilisation de la caméra
 {% endblock %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    {{ encore_entry_link_tags('openCamera') }}
-{% endblock %}
-
 {% block body %}
     <main class="container">
         <div class="progress">
@@ -18,10 +13,25 @@
         </div>
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <video id="video"></video>
-                <button id="startbutton">Prendre une photo</button>
-                <canvas id="canvas"></canvas>
-                <img src="http://placekitten.com/g/320/261" id="photo" alt="photo">
+                <div style='display:inline-block'>
+
+                    <video id="sourcevid" width='400' autoplay="true"></video>
+
+                    <div id="message" style='height:20px;width:350px;margin:5px;'>message:</div>
+                </div>
+
+                <canvas id="cvs" style='display:inline-block'></canvas>
+
+                <div>
+                    <button onclick='ouvrir_camera()' >ouvrir camera</button>
+                    <button onclick='fermer()' >fermer camera</button>
+                    <br>
+                    <button onclick='photo()' >prise de photo</button>
+                    <button onclick='sauver()' >sauvegarder</button>
+                    <button onclick='prepare_envoi()' >envoyer</button>
+                </div>
+
+                <div id="jaxa" style='width:80%;margin:5px;'>message:</div>
             </div>
         </div>
         <div class="row">
@@ -34,7 +44,120 @@
 {% endblock %}
 
 {%  block javascripts %}
-    {{ encore_entry_script_tags('openCamera') }}
+    <script>
+
+        function ouvrir_camera() {
+
+            navigator.mediaDevices.getUserMedia({ audio: false, video: { width: 400 } }).then(function(mediaStream) {
+
+                var video = document.getElementById('sourcevid');
+                video.srcObject = mediaStream;
+
+                var tracks = mediaStream.getTracks();
+
+                document.getElementById("message").innerHTML="message: "+tracks[0].label+" connecté"
+
+                console.log(tracks[0].label)
+                console.log(mediaStream)
+
+                video.onloadedmetadata = function(e) {
+                    video.play();
+                };
+
+            }).catch(function(err) { console.log(err.name + ": " + err.message);
+
+                document.getElementById("message").innerHTML="message: connection refusé"});
+        }
+
+        function photo(){
+
+            var vivi = document.getElementById('sourcevid');
+            //var canvas1 = document.createElement('canvas');
+            var canvas1 = document.getElementById('cvs')
+            var ctx =canvas1.getContext('2d');
+            canvas1.height=vivi.videoHeight
+            canvas1.width=vivi.videoWidth
+            console.log(vivi.videoWidth)
+            ctx.drawImage(vivi, 0,0, vivi.videoWidth, vivi.videoHeight);
+
+            //var base64=canvas1.toDataURL("image/png"); //l'image au format base 64
+            //document.getElementById('tar').value='';
+            //document.getElementById('tar').value=base64;
+        }
+
+        function sauver(){
+
+            if(navigator.msSaveOrOpenBlob){
+
+                var blobObject=document.getElementById("cvs").msToBlob()
+
+                window.navigator.msSaveOrOpenBlob(blobObject, "image.png");
+            }
+
+            else{
+
+                var canvas = document.getElementById("cvs");
+                var elem = document.createElement('a');
+                elem.href = canvas.toDataURL("image/png");
+                elem.download = "nom.png";
+                var evt = new MouseEvent("click", { bubbles: true,cancelable: true,view: window,});
+                elem.dispatchEvent(evt);
+            }
+        }
+
+        function prepare_envoi(){
+
+            var canvas = document.getElementById('cvs');
+            canvas.toBlob(function(blob){envoi(blob)}, 'image/jpeg');
+        }
+
+
+        function envoi(blob){
+
+            console.log(blob.type)
+
+            var formImage = new FormData();
+            formImage.append('image_a', blob, 'image_a.jpg');
+
+            var ajax = new XMLHttpRequest();
+
+            ajax.open("POST","http://scriptevol.free.fr/contenu/reception/upload_camera.php",true);
+
+            ajax.onreadystatechange=function(){
+
+                if (ajax.readyState == 4 && ajax.status==200){
+
+                    document.getElementById("jaxa").innerHTML+=(ajax.responseText);
+                }
+            }
+
+            ajax.onerror=function(){
+
+                alert("la requette a échoué")
+            }
+
+            ajax.send(formImage);
+            console.log("ok")
+        }
+
+
+        function fermer(){
+
+            var video = document.getElementById('sourcevid');
+            var mediaStream=video.srcObject;
+            console.log(mediaStream)
+            var tracks = mediaStream.getTracks();
+            console.log(tracks[0])
+            tracks.forEach(function(track) {
+                track.stop();
+                document.getElementById("message").innerHTML="message: "+tracks[0].label+" déconnecté"
+            });
+
+            video.srcObject = null;
+        }
+
+
+    </script>
 {% endblock %}
 
 
