view category and new path but no redirection after categories

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -13,26 +13,12 @@
             <h1 class="primary-title"> Foire Aux Questions </h1>
                 <h2 class="categories">
                     {% for category in categories %}
-                        <a class="fourth-button" href="{{ category.name }}"></a>
-
+                        <a class="fourth-button" href="{{ path('faq_category') }}">{{ category.name }}</a>
                     {% endfor %}
                 </h2>
         {% if is_granted("ROLE_ADMIN") %}
             <a class="fourth-button add-button" href="{{ path('faq_new') }}">Ajouter</a>
         {% endif %}
-
-        {% for faq in faqContent %}
-            <div class="menu-faq">
-                <article class="question">{{faq.question}}
-                    {% if is_granted('ROLE_ADMIN') %}
-
-                        <a class="fourth-button" href="{{ path('faq_edit', { 'id': faq.id} ) }}">Modifier</a>
-
-                    {% endif %}
-                </article>
-                <article class="answer">{{faq.answer}} </article>
-            </div>
-        {% endfor %}
 
     </main>
 {% endblock %}
