--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -23,17 +23,20 @@
                 <a class="text-right" href="{{ path('show_collect') }}">
                     Collectes à venir
                 </a>
-                
+
             <div class="row align-items-center border mb-2 mt-4">
                 {# legende #}
-                <div class="col-4 text-center">
+                <div class="col-3 text-center">
                     Blanc : estimation active
                 </div>
-                <div class="col-4 text-center bg-warning">
+                <div class="col-3 text-center bg-warning">
                     Orange : + de 15 jours
                 </div>
-                <div class="col-4 text-center bg-danger">
+                <div class="col-3 text-center bg-danger">
                     Rouge : + de 30 jours
+                </div>
+                <div class="col-3 text-center bg-primary">
+                    Bleue : Envoi chronopost
                 </div>
 
             </div>
@@ -56,6 +59,9 @@
             </div>
 
             {% for estimation in estimations %}
+
+                {% if estimation.status != 2 %}
+
                 <div class="row align-items-center border-bottom">
                     {# content #}
                     <div class="col-3 text-center">
@@ -95,6 +101,49 @@
                         </a>
                     {% endif %}
                 </div>
+
+                {% else %}
+
+                <div class="row align-items-center border-bottom bg-primary">
+                    {# content #}
+                    <div class="col-3 text-center">
+                        {% if estimation.user is not null%}
+                            {{  estimation.user.lastname }} {{ estimation.user.firstname }}
+                        {% else %}
+                            Utilisateur Anonyme
+                        {% endif %}
+                    </div>
+                    {% set difference = date(estimation.estimationDate()).diff(date("now")) %}
+                    {% if difference.days < 15 %}
+                    <div class="col-3 text-center ">
+                        {% elseif difference.days > 15 and difference.days < 30 %}
+                        <div class="col-3 text-center bg-warning">
+                            {% else %}
+                            <div class="col-3 text-center bg-danger">
+                                {% endif %}
+                                {{ estimation.brand }} {{ estimation.model }}
+                            </div>
+                            <div class="col-2 text-center ">
+                                {{ estimation.estimatedPrice }} €
+                            </div>
+                            <div class="col-2 text-center">
+                                {{ estimation.estimationDate | date('d/m/Y') }}
+                            </div>
+                            {% if estimation.isCollected == 0 and estimation.user is null %}
+                                <a class="col-2 fourth-button" href="{{ path('estimations_show', {id: estimation.id}) }}">
+                                    Détails
+                                </a>
+                            {% elseif estimation.isCollected == 0 %}
+                                <a class="col-2 primary-button" href="{{ path('verifyEstim', {id: estimation.id}) }}">
+                                    Collecter
+                                </a>
+                            {% else %}
+                                <a class="col-2 fourth-button" href="{{ path('estimations_show', {id: estimation.id}) }}">
+                                    Détails
+                                </a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
             {% endfor %}
         </div>
     </main>
