--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -129,18 +129,27 @@
                             Refusé
                         </p>
                     {% endif %}
+                </div>
 
-                </div>
+
+                {% if estimation.status == 2  %}
                 <div class="col-4">
-                    <a class="btn btn-info" href="">Voir l'étiquette chronnopost</a>
+                    <a class="btn btn-info" href="">
+                        Voir l'étiquette chronnopost
+                    </a>
                 </div>
+                {% endif %}
+
+
             </div>
         {% endif %}
     {% else %}
     <div class="row mb-3">
         <div class="offset-2 col-8">
             Tu n'as encore estimé aucun téléphone.
-            <a href="{{ path('new_estimation') }}" class="primary-button">Faire une estimation ?</a>
+            <a href="{{ path('new_estimation') }}" class="primary-button">
+                Faire une estimation ?
+            </a>
         </div>
     </div>
     {% endfor %}
